# selfgrow

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.omo/: ralph-loop.local.md
experiments/: experiment_report.txt  test_exp.json  test_smart_ratio.json
sim/: __init__.py  brain.py  brain_base.py  brain_goals.py  brain_messaging.py  brain_planning.py  buildings.py  config.py  cultural.py  diplomacy.py  engine.py  entity.py  entity_action.py  entity_combat.py  entity_craft.py  entity_reproduce.py  events.py  experiment.py  exporter.py  faction.py  faction_system.py  genome.py  ideology.py  knowledge.py  main.py  market.py  messaging.py  metrics.py  research.py  resource.py  rule_brain.py  savefile.py  season.py  smart_brain.py  spatial.py  trade_network.py  visualizer.py  world.py
sim/ui/: charts.py  (+12 more)
tests/: conftest.py  test_brain.py  test_brain_base.py  test_brain_goals.py  test_brain_messaging.py  test_brain_planning.py  test_buildings.py  test_config.py  test_cultural.py  test_diplomacy.py  test_engine.py  test_entity.py  test_entity_action.py  test_entity_combat.py  test_entity_craft.py  test_entity_reproduce.py  test_events.py  test_experiment.py  test_exporter.py  test_faction.py  test_faction_diplomacy.py  test_faction_system.py  test_genome.py  test_ideology.py  test_interactive_map.py  test_knowledge.py  test_market.py  test_messaging.py  test_metrics.py  test_performance.py  test_research.py  test_resource.py  test_rule_brain.py  test_savefile.py  test_season.py  test_smart_brain.py  test_spatial.py  test_trade_network.py  test_world.py
(+14 files in other folders)
